--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,7 +15,5 @@ jobs:
         run: npm ci
       - name: Run check
         run: npm run check
-      - name: Run test
-        run: npm t
-      - name: Run lint
-        run: npm run lint
+      - name: Aggregate list
+        run: npm run aggregate
