--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "check": "ts-node ./script/entrypoint/check",
     "check-sanity": "ts-node ./script/entrypoint/check-sanity",
+    "aggregate": "ts-node ./script/entrypoint/aggregate-token-list",
     "fix": "ts-node ./script/entrypoint/fix",
     "fix-sanity": "ts-node ./script/entrypoint/fix-sanity",
     "updateAuto": "ts-node ./script/entrypoint/updateAuto",
